{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 922,
  "lineage": "dd222efd-259d-0439-b3e3-a58fb59525e4",
  "resources": [
    {
      "module": "module.elb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:663368558722:loadbalancer/app/bashar-app-internal-alb/42fba59a6d4f38f1",
            "arn_suffix": "app/bashar-app-internal-alb/42fba59a6d4f38f1",
            "desync_mitigation_mode": "defensive",
            "dns_name": "internal-bashar-app-internal-alb-1183588294.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:663368558722:loadbalancer/app/bashar-app-internal-alb/42fba59a6d4f38f1",
            "idle_timeout": 60,
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "bashar-app-internal-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0d865d9c5dd92cab6"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0975b8de5ff1c13ae"
              },
              {
                "subnet_id": "subnet-0b8048eeaaf6f94b5"
              }
            ],
            "subnets": [
              "subnet-0975b8de5ff1c13ae",
              "subnet-0b8048eeaaf6f94b5"
            ],
            "tags": {
              "Name": "internal-alb"
            },
            "tags_all": {
              "Name": "internal-alb"
            },
            "vpc_id": "vpc-014a1a3969616137f",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.security_groups.aws_security_group.backend",
            "module.security_groups.aws_security_group.proxy",
            "module.subnets.aws_subnet.private",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.elb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:663368558722:loadbalancer/app/bashar-public-alb/e3e9ce1ccfc7bea5",
            "arn_suffix": "app/bashar-public-alb/e3e9ce1ccfc7bea5",
            "desync_mitigation_mode": "defensive",
            "dns_name": "bashar-public-alb-18060768.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:663368558722:loadbalancer/app/bashar-public-alb/e3e9ce1ccfc7bea5",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "bashar-public-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0b24b6aaee4e86fc5"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-045c77569219f7189"
              },
              {
                "subnet_id": "subnet-06e172ec73e745845"
              }
            ],
            "subnets": [
              "subnet-045c77569219f7189",
              "subnet-06e172ec73e745845"
            ],
            "tags": {
              "Name": "bashar-public-alb"
            },
            "tags_all": {
              "Name": "bashar-public-alb"
            },
            "vpc_id": "vpc-014a1a3969616137f",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.security_groups.aws_security_group.proxy",
            "module.subnets.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.elb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:663368558722:listener/app/bashar-app-internal-alb/42fba59a6d4f38f1/b9ffc8f40df0a3b6",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:663368558722:targetgroup/bashar-backend-tg/f422bcb16e5107e5",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:663368558722:listener/app/bashar-app-internal-alb/42fba59a6d4f38f1/b9ffc8f40df0a3b6",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:663368558722:loadbalancer/app/bashar-app-internal-alb/42fba59a6d4f38f1",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.elb.aws_lb.internal",
            "module.elb.aws_lb_target_group.backend",
            "module.security_groups.aws_security_group.backend",
            "module.security_groups.aws_security_group.proxy",
            "module.subnets.aws_subnet.private",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.elb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:663368558722:listener/app/bashar-public-alb/e3e9ce1ccfc7bea5/899a54104f00cfe7",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:663368558722:targetgroup/bashar-proxy-tg/5632069e16194c09",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:663368558722:listener/app/bashar-public-alb/e3e9ce1ccfc7bea5/899a54104f00cfe7",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:663368558722:loadbalancer/app/bashar-public-alb/e3e9ce1ccfc7bea5",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.elb.aws_lb.public",
            "module.elb.aws_lb_target_group.proxy",
            "module.security_groups.aws_security_group.proxy",
            "module.subnets.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.elb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:663368558722:targetgroup/bashar-backend-tg/f422bcb16e5107e5",
            "arn_suffix": "targetgroup/bashar-backend-tg/f422bcb16e5107e5",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:663368558722:targetgroup/bashar-backend-tg/f422bcb16e5107e5",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "bashar-backend-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-014a1a3969616137f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.elb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "proxy",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:663368558722:targetgroup/bashar-proxy-tg/5632069e16194c09",
            "arn_suffix": "targetgroup/bashar-proxy-tg/5632069e16194c09",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:663368558722:targetgroup/bashar-proxy-tg/5632069e16194c09",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "bashar-proxy-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-014a1a3969616137f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.elb",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:663368558722:targetgroup/bashar-backend-tg/f422bcb16e5107e5-20250718172434166900000008",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:663368558722:targetgroup/bashar-backend-tg/f422bcb16e5107e5",
            "target_id": "i-0be29825c2b76f5c4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.elb.aws_lb_target_group.backend",
            "module.instances.aws_instance.backend",
            "module.instances.aws_instance.proxy",
            "module.security_groups.aws_security_group.backend",
            "module.security_groups.aws_security_group.proxy",
            "module.subnets.aws_subnet.private",
            "module.subnets.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:663368558722:targetgroup/bashar-backend-tg/f422bcb16e5107e5-20250718172434497100000009",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:663368558722:targetgroup/bashar-backend-tg/f422bcb16e5107e5",
            "target_id": "i-04509522fe6c195bb"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.elb.aws_lb_target_group.backend",
            "module.instances.aws_instance.backend",
            "module.instances.aws_instance.proxy",
            "module.security_groups.aws_security_group.backend",
            "module.security_groups.aws_security_group.proxy",
            "module.subnets.aws_subnet.private",
            "module.subnets.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.elb",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "proxy",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:663368558722:targetgroup/bashar-proxy-tg/5632069e16194c09-20250718172336652400000007",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:663368558722:targetgroup/bashar-proxy-tg/5632069e16194c09",
            "target_id": "i-008bdcc34029779c3"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.elb.aws_lb_target_group.proxy",
            "module.instances.aws_instance.proxy",
            "module.security_groups.aws_security_group.proxy",
            "module.subnets.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:663368558722:targetgroup/bashar-proxy-tg/5632069e16194c09-20250718172336191800000006",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:663368558722:targetgroup/bashar-proxy-tg/5632069e16194c09",
            "target_id": "i-069844b3bc9136904"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.elb.aws_lb_target_group.proxy",
            "module.instances.aws_instance.proxy",
            "module.security_groups.aws_security_group.proxy",
            "module.subnets.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.gateways",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05b510b44292150ad",
            "domain": "vpc",
            "id": "eipalloc-05b510b44292150ad",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-52-21-163-219.compute-1.amazonaws.com",
            "public_ip": "52.21.163.219",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "bashar-nat-eip"
            },
            "tags_all": {
              "Name": "bashar-nat-eip"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.gateways",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:663368558722:internet-gateway/igw-05fe7386a1ebf673f",
            "id": "igw-05fe7386a1ebf673f",
            "owner_id": "663368558722",
            "tags": {
              "Name": "bashar-main-gw"
            },
            "tags_all": {
              "Name": "bashar-main-gw"
            },
            "vpc_id": "vpc-014a1a3969616137f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.gateways",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05b510b44292150ad",
            "association_id": "eipassoc-06a604244aee77f74",
            "connectivity_type": "public",
            "id": "nat-0d3756141b0d540cc",
            "network_interface_id": "eni-029c3b186ce171137",
            "private_ip": "10.0.0.159",
            "public_ip": "52.21.163.219",
            "subnet_id": "subnet-06e172ec73e745845",
            "tags": {
              "Name": "bashar-main-nat"
            },
            "tags_all": {
              "Name": "bashar-main-nat"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.gateways.aws_eip.nat",
            "module.subnets.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.instances",
      "mode": "managed",
      "type": "aws_instance",
      "name": "backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0150ccaf51ab55a51",
            "arn": "arn:aws:ec2:us-east-1:663368558722:instance/i-0be29825c2b76f5c4",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0be29825c2b76f5c4",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "project",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-063341eca6445941a",
            "private_dns": "ip-10-0-1-28.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.28",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0ddb584412166e722",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0975b8de5ff1c13ae",
            "tags": {
              "Name": "bashar-backend-1"
            },
            "tags_all": {
              "Name": "bashar-backend-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0d865d9c5dd92cab6"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.instances.aws_instance.proxy",
            "module.security_groups.aws_security_group.backend",
            "module.security_groups.aws_security_group.proxy",
            "module.subnets.aws_subnet.private",
            "module.subnets.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0150ccaf51ab55a51",
            "arn": "arn:aws:ec2:us-east-1:663368558722:instance/i-04509522fe6c195bb",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-04509522fe6c195bb",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "project",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0c1da0a075985bb61",
            "private_dns": "ip-10-0-3-114.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.114",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-06efe9a06fbf32a2c",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b8048eeaaf6f94b5",
            "tags": {
              "Name": "bashar-backend-2"
            },
            "tags_all": {
              "Name": "bashar-backend-2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0d865d9c5dd92cab6"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.instances.aws_instance.proxy",
            "module.security_groups.aws_security_group.backend",
            "module.security_groups.aws_security_group.proxy",
            "module.subnets.aws_subnet.private",
            "module.subnets.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.instances",
      "mode": "managed",
      "type": "aws_instance",
      "name": "proxy",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0150ccaf51ab55a51",
            "arn": "arn:aws:ec2:us-east-1:663368558722:instance/i-008bdcc34029779c3",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-008bdcc34029779c3",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "project",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0564df9fb02f1561f",
            "private_dns": "ip-10-0-0-82.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.82",
            "public_dns": "ec2-3-82-58-216.compute-1.amazonaws.com",
            "public_ip": "3.82.58.216",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0468bacdc759e961a",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06e172ec73e745845",
            "tags": {
              "Name": "bashar-proxy-1"
            },
            "tags_all": {
              "Name": "bashar-proxy-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0b24b6aaee4e86fc5"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.security_groups.aws_security_group.proxy",
            "module.subnets.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0150ccaf51ab55a51",
            "arn": "arn:aws:ec2:us-east-1:663368558722:instance/i-069844b3bc9136904",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-069844b3bc9136904",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "project",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-01e26f9c0f364ecd0",
            "private_dns": "ip-10-0-2-43.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.43",
            "public_dns": "ec2-44-195-0-234.compute-1.amazonaws.com",
            "public_ip": "44.195.0.234",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-07ef3d0938dc5e345",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-045c77569219f7189",
            "tags": {
              "Name": "bashar-proxy-2"
            },
            "tags_all": {
              "Name": "bashar-proxy-2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0b24b6aaee4e86fc5"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.security_groups.aws_security_group.proxy",
            "module.subnets.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.routes",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:663368558722:route-table/rtb-096ac5ce5a63e78e2",
            "id": "rtb-096ac5ce5a63e78e2",
            "owner_id": "663368558722",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0d3756141b0d540cc",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private-rt"
            },
            "tags_all": {
              "Name": "private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-014a1a3969616137f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.gateways.aws_eip.nat",
            "module.gateways.aws_nat_gateway.nat",
            "module.subnets.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.routes",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:663368558722:route-table/rtb-0fc08a3d0d9370e62",
            "id": "rtb-0fc08a3d0d9370e62",
            "owner_id": "663368558722",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-05fe7386a1ebf673f",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-rt"
            },
            "tags_all": {
              "Name": "public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-014a1a3969616137f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.gateways.aws_internet_gateway.gw",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.routes",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "us-east-1a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e98d10c84cb1eb75",
            "route_table_id": "rtb-096ac5ce5a63e78e2",
            "subnet_id": "subnet-0975b8de5ff1c13ae"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.gateways.aws_eip.nat",
            "module.gateways.aws_nat_gateway.nat",
            "module.routes.aws_route_table.private",
            "module.subnets.aws_subnet.private",
            "module.subnets.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": "us-east-1b",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-094af9248fa44a095",
            "route_table_id": "rtb-096ac5ce5a63e78e2",
            "subnet_id": "subnet-0b8048eeaaf6f94b5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.gateways.aws_eip.nat",
            "module.gateways.aws_nat_gateway.nat",
            "module.routes.aws_route_table.private",
            "module.subnets.aws_subnet.private",
            "module.subnets.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.routes",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "us-east-1a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00c238cde6bc2046a",
            "route_table_id": "rtb-0fc08a3d0d9370e62",
            "subnet_id": "subnet-06e172ec73e745845"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.gateways.aws_internet_gateway.gw",
            "module.routes.aws_route_table.public",
            "module.subnets.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": "us-east-1b",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fca0115ab9d070ea",
            "route_table_id": "rtb-0fc08a3d0d9370e62",
            "subnet_id": "subnet-045c77569219f7189"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.gateways.aws_internet_gateway.gw",
            "module.routes.aws_route_table.public",
            "module.subnets.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:663368558722:security-group/sg-0d865d9c5dd92cab6",
            "description": "Allow traffic from proxy and SSH",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d865d9c5dd92cab6",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0b24b6aaee4e86fc5"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0b24b6aaee4e86fc5"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "bashar-backend-sg",
            "name_prefix": "",
            "owner_id": "663368558722",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-014a1a3969616137f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.security_groups.aws_security_group.proxy",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "proxy",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:663368558722:security-group/sg-0b24b6aaee4e86fc5",
            "description": "Allow HTTP/HTTPS and SSH to proxy",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b24b6aaee4e86fc5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "bashar-proxy-sg",
            "name_prefix": "",
            "owner_id": "663368558722",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-014a1a3969616137f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "us-east-1a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:663368558722:subnet/subnet-0975b8de5ff1c13ae",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0975b8de5ff1c13ae",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "663368558722",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "bashar-private-us-east-1a"
            },
            "tags_all": {
              "Name": "bashar-private-us-east-1a"
            },
            "vpc_id": "vpc-014a1a3969616137f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": "us-east-1b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:663368558722:subnet/subnet-0b8048eeaaf6f94b5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b8048eeaaf6f94b5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "663368558722",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "bashar-private-us-east-1b"
            },
            "tags_all": {
              "Name": "bashar-private-us-east-1b"
            },
            "vpc_id": "vpc-014a1a3969616137f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "us-east-1a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:663368558722:subnet/subnet-06e172ec73e745845",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06e172ec73e745845",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "663368558722",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "bashar-public-us-east-1a"
            },
            "tags_all": {
              "Name": "bashar-public-us-east-1a"
            },
            "vpc_id": "vpc-014a1a3969616137f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": "us-east-1b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:663368558722:subnet/subnet-045c77569219f7189",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-045c77569219f7189",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "663368558722",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "bashar-public-us-east-1b"
            },
            "tags_all": {
              "Name": "bashar-public-us-east-1b"
            },
            "vpc_id": "vpc-014a1a3969616137f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:663368558722:vpc/vpc-014a1a3969616137f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-097afb2d87a352700",
            "default_route_table_id": "rtb-0c8ec1bef7e66e7bb",
            "default_security_group_id": "sg-02d47b552b59ca7da",
            "dhcp_options_id": "dopt-004ebf210e2172cf0",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-014a1a3969616137f",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c8ec1bef7e66e7bb",
            "owner_id": "663368558722",
            "tags": {
              "Name": "bashar's-web-app-vpc"
            },
            "tags_all": {
              "Name": "bashar's-web-app-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}